crates/keron-lang/tests/corpus/errors/check/union_eq_unknown_variant.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: `"Banana"` is not a variant of `OsType` (expected one of `"Linux"`, `"Macos"`, `"Windows"`, `"Unknown"`)
  --> 4:40
  |
4 | val impossible: Boolean = os_type() == "Banana"
  |                                        ^^^^^^^^
